<resources>
    <string name="host_ip">192.168.42.182</string>
    <string name="host_port">9090</string>
    <string name="cam_host_port">8080</string>


    <string name="app_name">fury</string>


    <string name="hello">Hello World, clientActivity!</string>
    <string name="connect">开始</string>
    <string name="disconnect">停止</string>
    <string name="send">发送</string>


    <string name="str_speed_dec">速度--</string>
    <string name="str_speed_inc">速度++</string>

    <string name="str_up">前</string>
    <string name="str_down">后</string>
    <string name="str_left">左</string>
    <string name="str_right">右</string>
    <string name="str_mid">Led</string>
    
    <string name="str_host_ip">主机：</string>
    <string name="str_host_port">端口：</string>
    <string name="str_console">终端：</string>
    <string name="console_default">终端输出：</string>
    
    <string name="video_notic">实时Video显示</string>
    <string name="full_screen">Video全屏</string>


</resources>
