<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- 视频区域 -->
    <LinearLayout
        android:id="@+id/video_area_layout"
        android:layout_width="fill_parent"
        android:layout_height="220dp"
        android:background="#bbb"
        android:orientation="vertical" >
        
    <TextView
        android:id="@+id/notic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:text="@string/video_notic" />
    </LinearLayout>

    <!-- 终端信息显示-->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_gravity="center">
    <EditText
        android:id="@+id/console_show"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:focusable="false"
        android:textSize="13dp"
        android:hint="@string/console_default"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:paddingLeft="5dp"
        android:background="@android:color/background_dark"
        android:textColor="@android:color/holo_green_dark" />
    </RelativeLayout>
    
    <!-- 主机、端口输入-->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp">
    <TextView
        android:id="@+id/host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_centerVertical="true"
        android:text="@string/str_host_ip" />
    <EditText
        android:id="@+id/host_ip"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_toRightOf="@id/host"
        android:textColor="@android:color/holo_blue_dark"
        android:inputType="phone" />
    <TextView
        android:id="@+id/port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/host_ip"
        android:textSize="16dp"
        android:textStyle="bold"
        android:text="@string/str_host_port" />
    <EditText
        android:id="@+id/host_port"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_toRightOf="@id/port"
        android:textColor="@android:color/holo_blue_dark"
        android:inputType="number" />
   </RelativeLayout>

    <!-- 控制按钮1-->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btnConnect"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
	        android:textSize="16dp"
	        android:textStyle="bold"
            android:text="@string/connect" />
        <Button
            android:id="@+id/btn_up"
            android:layout_width="@dimen/btn_width" 
            android:layout_height="@dimen/btn_height"
            android:layout_below="@id/btnConnect"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="125dp"
	        android:textSize="16dp"
	        android:textStyle="bold"
            android:text="@string/str_up" />
        <Button
            android:id="@+id/btn_left"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_below="@id/btn_up"
            android:layout_marginLeft="25dp"
	        android:textSize="16dp"
	        android:textStyle="bold"
            android:text="@string/str_left" />
        <Button
            android:id="@+id/btn_mid"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_below="@id/btn_up"
            android:layout_toRightOf="@id/btn_left"
	        android:textSize="16dp"
	        android:textStyle="bold"
            android:text="@string/str_mid" />
        <Button
            android:id="@+id/btn_right"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_below="@id/btn_up"
            android:layout_toRightOf="@id/btn_mid"
	        android:textSize="16dp"
	        android:textStyle="bold"
            android:text="@string/str_right" />
        <Button
            android:id="@+id/btn_down"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_below="@id/btn_left"
            android:layout_marginLeft="125dp"
	        android:textSize="16dp"
	        android:textStyle="bold"
            android:text="@string/str_down" />

    </RelativeLayout>
    
 <!-- 控制按钮2-->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_gravity="center">
        <Button
            android:id="@+id/btn_speed_inc"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="75dp"
	        android:textSize="16dp"
	        android:textStyle="bold"
            android:text="@string/str_speed_inc" />
        <Button
            android:id="@+id/btn_speed_dec"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_toRightOf="@id/btn_speed_inc"
            android:layout_marginLeft="0dp"
	        android:textSize="16dp"
	        android:textStyle="bold"
            android:text="@string/str_speed_dec" />
    </RelativeLayout>


    
</LinearLayout>