<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <!-- 控制-->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_gravity="center">

        <com.fury.MySurfaceViewTest
            android:id="@+id/mySurfaceViewVideoFullScreen"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@android:color/darker_gray"
            android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/btn_forward"
            android:layout_width="@dimen/btn_width_full_screen" 
            android:layout_height="@dimen/btn_height_full_screen"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="@dimen/btn_h_gap"
	        android:textSize="16dp"
	        android:textStyle="bold"
            android:text="@string/str_up" />
        <Button
            android:id="@+id/btn_turn_left"
            android:layout_width="@dimen/btn_width_full_screen"
            android:layout_height="@dimen/btn_height_full_screen"
            android:layout_below="@id/btn_forward"
            android:layout_marginLeft="10dp"
	        android:textSize="16dp"
	        android:textStyle="bold"
            android:text="@string/str_left" />
        <Button
            android:id="@+id/btn_led"
            android:layout_width="@dimen/btn_width_full_screen"
            android:layout_height="@dimen/btn_height_full_screen"
            android:layout_below="@id/btn_forward"
            android:layout_toRightOf="@id/btn_turn_left"
	        android:textSize="16dp"
	        android:textStyle="bold"
            android:text="@string/str_mid" />
        <Button
            android:id="@+id/btn_turn_right"
            android:layout_width="@dimen/btn_width_full_screen"
            android:layout_height="@dimen/btn_height_full_screen"
            android:layout_below="@id/btn_forward"
            android:layout_toRightOf="@id/btn_led"
	        android:textSize="16dp"
	        android:textStyle="bold"
            android:text="@string/str_right" />
        <Button
            android:id="@+id/btn_back"
            android:layout_width="@dimen/btn_width_full_screen"
            android:layout_height="@dimen/btn_height_full_screen"
            android:layout_below="@id/btn_turn_left"
            android:layout_marginLeft="@dimen/btn_h_gap"
	        android:textSize="16dp"
	        android:textStyle="bold"
            android:text="@string/str_down" />
    </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/btn_forward_cam"
                android:layout_width="@dimen/btn_width_full_screen"
                android:layout_height="@dimen/btn_height_full_screen"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="@dimen/btn_h_gap"
                android:textSize="16dp"
                android:textStyle="bold"
                android:text="@string/str_up" />
            <Button
                android:id="@+id/btn_turn_left_cam"
                android:layout_width="@dimen/btn_width_full_screen"
                android:layout_height="@dimen/btn_height_full_screen"
                android:layout_below="@id/btn_forward_cam"
                android:layout_marginLeft="10dp"
                android:textSize="16dp"
                android:textStyle="bold"
                android:text="@string/str_left" />
            <Button
                android:id="@+id/btn_cam"
                android:layout_width="@dimen/btn_width_full_screen"
                android:layout_height="@dimen/btn_height_full_screen"
                android:layout_below="@id/btn_forward_cam"
                android:layout_toRightOf="@id/btn_turn_left_cam"
                android:textSize="16dp"
                android:textStyle="bold"
                android:text="@string/str_mid" />
            <Button
                android:id="@+id/btn_turn_right_cam"
                android:layout_width="@dimen/btn_width_full_screen"
                android:layout_height="@dimen/btn_height_full_screen"
                android:layout_below="@id/btn_forward_cam"
                android:layout_toRightOf="@id/btn_cam"
                android:textSize="16dp"
                android:textStyle="bold"
                android:text="@string/str_right" />
            <Button
                android:id="@+id/btn_back_cam"
                android:layout_width="@dimen/btn_width_full_screen"
                android:layout_height="@dimen/btn_height_full_screen"
                android:layout_below="@id/btn_turn_left_cam"
                android:layout_marginLeft="@dimen/btn_h_gap"
                android:textSize="16dp"
                android:textStyle="bold"
                android:text="@string/str_down" />
        </RelativeLayout>



    </RelativeLayout>


    
</LinearLayout>